docs/전처리/version1.2/전처리-설계-명세서.md
# 전처리 설계 명세서 — version 1.2 (2026-09-09)

> **무엇을 만드나**: 모델에 들어가기 전 자료를 다듬는 규격. v1.1 이 만든 **가로축(횡단면) 네 단계**를
> 오준영 님이 통제 실험으로 재셨고([PR #210](https://github.com/devlee328288/Alpha_Stack/pull/210)),
> **정확도가 1.58%p 떨어졌습니다.** v1.2 는 *왜* 떨어졌는지를 실측으로 갈라 내고, **우리 라벨(절대
> ±2% 밴드)에 맞는 전처리**를 다시 설계합니다. 구현은 3차 세션입니다.
>
> **원칙 (v1.0 부터)**: 모델을 먼저 정하고 그 입력 규격에서 전처리를 역산한다. 순서를 뒤집지 않는다.
> **v1.2 가 더한 원칙**: **라벨을 먼저 적고 거기서 역산한다.** 라벨이 절대(absolute)면 피처의
> 수준(level)을 보존한다. 퀀트 표준은 대부분 **상대(relative) 목표**를 전제하므로 그대로 옮기면 안 맞는다.
>
> 🔴 **팀원 코드에 맞춥니다.** 오준영 님 [`scripts/run_stock_preprocessing_ablation.py`](../../../scripts/run_stock_preprocessing_ablation.py)
> 의 조건 사전에 끼우는 모양으로 설계했고, 신장환 님 `features/*.py` 는 손대지 않습니다.
> 라벨([ADR 0006](../../decisions/0006-개별종목-중립대와-평가기준선.md))·선정 기준
> ([ADR 0007](../../decisions/0007-최종-모델-선정과-홀드아웃.md))·진입 축(T+1 시가)은 그대로입니다.

---

## 0. v1.1 → v1.2 무엇이 바뀌었나

| | v1.1 (2026-09-09 오전) | v1.2 (2026-09-09 저녁) | 근거 |
|---|---|---|---|
| ①② 의 효과 | *"로지스틱에 도움이 될 수 있다"* (가설) | 🔴 **−1.58%p** (기준선 대비 +2.43 → +0.84) · Macro F1 +0.38%p | [PR #210](https://github.com/devlee328288/Alpha_Stack/pull/210) 조합 K LogReg 12폴드 통제 실험 |
| 왜 떨어지나 | *"라벨이 절대 기준이라서"* (§5 가설 · 검증 안 함) | ✅ **실측으로 확인** — 변동성 **수준**이 라벨을 정하고(ρ=1.0), 날짜별 z-score 가 그 수준을 지운다 | §1 |
| v1.1 §5 "다음 판" B·C | 할 일 | ✅ **오준영 님이 하셨다** — B(12폴드 재측정) · C(로지스틱 ①② 효과) 둘 다 #210 | |
| 기본값 | ①② 켜짐 | **최종 모델 경로에는 아무것도 안 켠다** · 함수는 남긴다 | #210 결정 |
| 설계 방향 | 퀀트 표준(횡단면) 그대로 | **라벨에서 역산** — 수준 보존 · 시계열 축 · 날짜 수준 복원 | §2·§3 |
| 표본 | 159,936행 | **159,900행** (A~K 공통) · 조합 K 단독 159,939 | PR #189·#193·#209 뒤 |

**v1.1 을 지웠다고 보지 마십시오.** 네 단계 함수는 그대로 유효하고, **횡단면 상대 목표**(그날 상위
N% 를 맞히는 라벨)로 바꾸면 그대로 맞는 도구입니다. 우리 라벨이 그게 아닐 뿐입니다.

---

## 1. 왜 표준이 여기서 안 맞나 — 라벨 정의가 전처리를 정한다

### 1.1 실측 — 절대 ±2% 밴드는 변동성 **수준**을 필요로 한다

고정: `main` · 오준영 님 정본 경로 `load_stock_model_dataset` · 조합 K 표본 **159,939행 · 157종 ·
3,343일** · 홀드아웃 `20240901` · 재학습 없음(라벨과 피처를 세기만 했다). 바꾼 것 없음.

**① `hv_20` 십분위별 P(라벨 ≠ 중립)**

| 십분위 | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 |
|---|---:|---:|---:|---:|---:|---:|---:|---:|---:|---:|
| `hv_20` 중앙 | 0.0106 | 0.0135 | 0.0154 | 0.0171 | 0.0188 | 0.0205 | 0.0226 | 0.0250 | 0.0288 | 0.0383 |
| **비중립** | **0.4755** | 0.5505 | 0.5676 | 0.5961 | 0.6157 | 0.6218 | 0.6499 | 0.6681 | 0.7001 | **0.7523** |

**Spearman ρ = 1.0000.** 최하 십분위 47.6% → 최상 75.2% (**1.58배**). 변동성이 높은 종목일수록
5일에 2% 를 넘게 움직일 확률이 **단조로** 오릅니다. 당연한 말처럼 들리지만 이것이 전부입니다 —
**절대 밴드 라벨에서 변동성 수준은 라벨의 절반을 설명하는 정보**입니다. 조합 I·J·K 가
`atr_ratio`·`hv_20`·`hv_regime` 을 셋 다 넣고 1~3위인 이유가 여기 있습니다.

**② 날짜별 횡단면 평균 `hv_20` ↔ 그날의 비중립 비율** (3,343일 · 하루 20종 이상)

| 날짜 십분위 | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 |
|---|---:|---:|---:|---:|---:|---:|---:|---:|---:|---:|
| 그날 평균 `hv_20` | 0.0159 | 0.0172 | 0.0181 | 0.0193 | 0.0203 | 0.0212 | 0.0221 | 0.0235 | 0.0254 | 0.0297 |
| **그날 비중립** | **0.5526** | 0.5738 | 0.5960 | 0.5872 | 0.6209 | 0.6322 | 0.6293 | 0.6563 | 0.6612 | **0.6871** |

**Spearman ρ = 0.3244.** 시장 전체가 시끄러운 날은 **종목을 가리지 않고** 밴드를 더 많이 벗어납니다.
이것은 **종목 간 순서가 아니라 날짜의 수준**이 담고 있는 정보입니다.

**③ 같은 자료에 날짜별 z-score 를 걸면**

| | 십분위 ρ | 점이연 상관 (비중립 ↔ 값) | 최하 → 최상 | 날짜별 평균 |
|---|---:|---:|---|---|
| 원값 `hv_20` | +1.0000 | **+0.1421** | 0.4755 → 0.7523 | 0.0140 ~ 0.0548 |
| 날짜별 z-score | +1.0000 | **+0.1248** | 0.4964 → 0.7208 | **−6.9e-16 ~ +7.1e-16** |

**종목 간 순서는 남고(ρ 그대로) 날짜 수준은 사라집니다**(날짜별 평균이 정의상 0). 라벨을 설명하는
힘이 0.142 → 0.125 로 **12% 줄었고**, 그것이 ②의 정보를 지운 값입니다. **이게 −1.58%p 의 기제입니다.**

### 1.2 라벨을 바꾸면 관계가 뒤집힌다 — 표준(de Prado)과의 대조

López de Prado 의 삼중 배리어는 배리어를 **변동성으로 스케일**합니다 — `h_t = c·σ_t`
(*Advances in Financial Machine Learning* 3장). 우리 ±2% 는 고정입니다. 같은 자료로 둘을 비교하면 —

| 밴드 | 하락 | 중립 | 상승 | 비중립 | `hv_20` 십분위 ↔ 비중립 |
|---|---:|---:|---:|---:|---:|
| **고정 ±2%** (우리) | 0.3190 | 0.3795 | 0.3015 | 0.6205 | **ρ = +1.000** |
| `c=0.5·σ` | 0.3012 | 0.4140 | 0.2848 | 0.5860 | |
| `c=1.0·σ` | 0.1514 | 0.6981 | 0.1505 | 0.3019 | **ρ = −1.000** |
| `c=1.5·σ` | 0.0696 | 0.8531 | 0.0773 | 0.1469 | |

(`σ_t = hv_20·√5` · 5일 σ 의 중앙값 0.0439 라 **우리 2% 는 0.46σ** — 꽤 좁은 밴드입니다)

🔴 **변동성 스케일 밴드에서는 관계가 정확히 뒤집힙니다** (ρ = −1.0 · 최하 십분위 43.2% → 최상 18.4%).
변동성이 높은 종목이 자기 σ 밴드는 **덜** 벗어납니다 — 변동성 평균회귀입니다(`hv_20` 이 고변동
종목의 5일 변동을 과대예측). 즉 —

> **라벨이 절대면 "변동성이 높은가" 가 답을 정하고, 라벨이 상대(σ 스케일)면 "변동성이 지금
> 정점인가" 가 답을 정합니다.** 같은 피처가 반대 방향으로 쓰입니다. **전처리는 라벨을 먼저 보고
> 정해야 합니다.**

우리는 [#197](https://github.com/devlee328288/Alpha_Stack/issues/197) 에서 **절대 ±2% 유지(㉮)** 로
결정했습니다. 그러니 이 문서의 설계는 **수준을 보존하는 쪽**입니다.

### 1.3 표준이 무엇을 전제하는가 — 그리고 우리 피처는 이미 그것을 갖췄다

횡단면 z-score(Barra · qlib `CSZScoreNorm` · Alphalens)는 두 가지를 전제합니다.

| 전제 | 표준의 이유 | 우리 자료 |
|---|---|---|
| 목표가 **상대**다 | "그날 어느 종목이 다른 종목보다 나은가" — 시장 전체 움직임은 헤지로 사라진다 | ❌ 절대 ±2% · long-only `{0,+1}` 라 시장 움직임이 그대로 손익 |
| 피처 단위가 **제각각**이다 | 원가격·거래량·시총을 같은 자에 놓으려면 표준화가 필요 | ❌ **이미 비율**이다 — `sma_gap`(비율) · `atr_ratio`(ATR/종가) · `rsi`(0~100) · `bb_position`(0~1) · `hv`(σ) |

**둘 다 우리에게 없습니다.** 그래서 횡단면 표준화는 **얻는 것 없이 잃기만** 합니다 — 단위 맞추기는
이미 돼 있고, 날짜 수준은 라벨이 쓰는 정보입니다. Quantdare 의 정리가 정확히 이것입니다:
*"횡단면 정규화의 주된 단점은 **시점마다 다른 평균·표준편차 수준의 정보를 잃는 것**이다."*

---

## 2. 원칙 셋 — 이 판이 정한 것

1. **라벨이 절대면 수준을 보존한다.** 날짜 안에서 평균을 빼거나 표준편차로 나누지 않는다.
2. **표준화가 필요하면 시계열 축으로** — 종목 자기 이력 대비, **인과적으로**(t 시점까지만).
   종목 안에서 "지금이 평소보다 시끄러운가" 는 보존되고, 시장 전체가 오르면 다 오른다.
3. **변동성 축은 손대지 않는다.** `hv_20`·`atr_ratio`·`hv_regime` 은 라벨과 직접 연결된 수준이다.
   winsorize 조차 조심 — 극단 변동성이 곧 극단 라벨이라 "이상치" 가 아니라 "사건" 이다.

그리고 **하나 더 — 실측이 우선이다.** 위 셋은 근거가 있지만 §3 의 네 후보를 **같은 12폴드에서
재서** 채택한다. 원칙이 실측을 이기지 않는다.

---

## 3. 설계 — 네 후보 (3차 세션이 구현·실측한다)

전부 **조합 K · LogisticRegression · 12폴드 expanding · A~K 공통 159,900행** 위에서, 오준영 님
#210 스크립트의 조건으로 끼웁니다. 원값(+2.43%p · 10/12)이 기준선입니다.

### A. `winsorize_only` — 날짜별 MAD 3배, 표준화 없음

```python
preprocess_cross_section(frame, cols, winsorize="mad", zscore=False)
```

- **무엇**: 그날 횡단면의 극단만 경계로 당긴다. 평균·표준편차는 안 건드리므로 **수준 보존**.
- **왜**: #210 이 winsorize+z 를 **묶어서** 쟀다. 어느 쪽이 해쳤는지 갈라야 한다. z-score 가 범인이면
  winsorize 만으로는 안 떨어져야 한다. `bb_position` 42 ([#194](https://github.com/devlee328288/Alpha_Stack/issues/194))
  같은 값은 그대로 잡힌다.
- **예상**: 원값과 거의 같거나 조금 낫다. 떨어지면 §2 원칙 3(변동성 축 winsorize)이 원인 — D 로 간다.
- **끝**: 12폴드 기준선 대비 accuracy · 승리 폴드 · Macro F1 세 칸.

### B. `ts_zscore_causal` — 종목별 인과적 시계열 표준화

```python
standardize_time_series(frame, cols, window=250, min_periods=60, by="code")
#   z_t = (x_t − mean(x_{t−w+1..t})) / std(x_{t−w+1..t})   — t 를 포함, t+1 이후는 절대 안 본다
```

- **무엇**: 각 종목이 **자기 최근 250거래일** 대비 지금이 얼마나 다른가. 날짜 축이 아니라 시계열 축.
- **왜**: 수준 정보 보존 — 시장 전체가 시끄러우면 모든 종목의 z 가 함께 오른다(날짜별 평균이 0 이
  되지 않는다). 종목마다 다른 기준 수준(삼성전자와 소형주의 `hv_20` 평균이 다르다)은 지운다 —
  그건 라벨과 무관한 종목 고정효과다.
- **주의**: **인과성이 생명**이다. `rolling(window).mean()` 은 t 를 포함하지만 t+1 을 안 본다 —
  `shift` 가 필요 없다. 다만 준비구간이 `min_periods` 만큼 새로 생긴다(60거래일). `hv_regime` 의
  269 안에 들어가므로 조합 K 표본은 안 줄어든다. 시험으로 못박는다: *"뒤 행을 잘라도 앞 행의 z 는 같다."*
- **예상**: 가장 유력한 후보. 표준화의 이득(로지스틱 계수 안정)을 얻으면서 라벨이 쓰는 수준을
  안 지운다.
- **끝**: 함수 + 인과성 시험 3건 + 12폴드 세 칸.

### C. `cs_zscore_plus_date_level` — 횡단면 z + 날짜 수준 복원

```python
X = preprocess_cross_section(frame, cols, winsorize="mad", zscore=True)      # v1.1 그대로
X["cs_mean_hv_20"]  = frame.groupby("bas_dd")["hv_20"].transform("mean")     # 지운 것을 돌려 넣는다
X["cs_std_hv_20"]   = frame.groupby("bas_dd")["hv_20"].transform("std")
X["cs_mean_atr_ratio"] = ...                                                 # 변동성 축 셋
```

- **무엇**: v1.1 의 z-score 를 그대로 쓰되, 지워진 **날짜 수준을 명시적 피처로 복원**한다.
- **왜**: §1.1 ③ 이 "지운 것은 날짜 수준" 이라고 말한다. 그러면 그것만 돌려주면 손실이 없어야 한다.
  이게 맞으면 §1 의 설명이 옳다는 **직접 검증**이고, 틀리면 다른 원인이 있다.
- **주의**: 피처가 14 → 17 로 는다. 다중공선성(`cs_mean_hv_20` 은 모든 행이 그날 같은 값) —
  로지스틱은 괜찮다. **횡단면 평균은 그날 후보 44~50종으로 계산**하므로 미래참조 없음(t 의 값만).
- **예상**: 원값 근처로 회복. 원값을 넘으면 "z 의 이득 + 수준 보존" 을 동시에 얻은 것.
- **끝**: 함수 + 12폴드 세 칸 + **B 와의 비교**.

### D. `selective_vol_raw` — 변동성 축은 원값, 나머지만 처리

```python
vol_axis = {"hv_20", "atr_ratio", "hv_regime", "bb_bandwidth"}
others   = [c for c in cols if c not in vol_axis]
X = frame[cols].copy()
X[others] = preprocess_cross_section(frame, others, winsorize="mad", zscore=True)
```

- **무엇**: §2 원칙 3 을 그대로. 라벨과 직접 연결된 변동성 축 넷은 손대지 않고, 방향·추세·거래량
  축(`rsi`·`sma_gap`·`macd`·`vol_ratio`·`obv`·`daily_return`·`relative_ret_5_market`)만 횡단면 처리.
- **왜**: "수준을 보존해야 하는 피처" 와 "상대 순위가 뜻인 피처" 가 섞여 있다는 가설. `rsi_14` 나
  `sma_gap` 은 이미 종목 안에서 정규화된 값이라 횡단면 z 로 잃을 수준이 적다.
- **예상**: A 와 B 사이. 이게 A 보다 좋으면 방향 축의 횡단면 처리가 이득이라는 뜻.
- **끝**: 12폴드 세 칸.

### 시행 예산과 사전 등록

| | 시행 | 누적 (조합 K LogReg 위에서) |
|---|---:|---:|
| #210 (원값 · winsor+z) | 2 | 2 |
| **A·B·C·D** | **4** | **6** |

- **채택 기준 (사전 등록)**: [ADR 0007](../../decisions/0007-최종-모델-선정과-홀드아웃.md) 그대로 —
  기준선 대비 accuracy → Macro F1 → 승리 폴드. **원값(+2.43%p · 10/12)을 넘어야 채택.** 넘는 것이
  없으면 "전처리 없음" 유지, 이 문서는 근거로 남는다.
- **다중검정**: 후보 6개. 최고가 원값보다 나아도 **Bonferroni(N=6) 문턱과 12폴드 대응표본 t** 를
  함께 적는다(모델파트 v1.2 §3 의 방식). *"이겼다"* 가 아니라 *"몇 개 중 이겼고 p 가 얼마"* 로 적는다.
- **하나만 바꾼다**: 라벨·피처 목록·모델·폴드·표본 전부 고정. 바꾸는 것은 전처리 조건 하나.
- **순서**: **A 먼저.** A 가 원값보다 나쁘면 winsorize 자체가 문제(변동성 축 극단 = 사건)라 D 의
  변동성 제외 규칙을 A 에도 적용한 A′ 를 추가하고 B·C 도 그 규칙을 따른다.

---

## 4. 팀 코드에 끼우는 자리 — 누구 파일을 어떻게

| 자리 | 파일 | 담당 | 무엇을 |
|---|---|---|---|
| 새 함수 | [`features/preprocessing.py`](../../../features/preprocessing.py) | 데이터(이동원) | `standardize_time_series` (B) · `restore_date_level` (C) · `split_by_axis` (D) |
| 조건 등록 | [`scripts/run_stock_preprocessing_ablation.py`](../../../scripts/run_stock_preprocessing_ablation.py) | **오준영 님 파일** — 먼저 여쭌다 | `RAW`·`WINSOR_ZSCORE` 상수 옆에 조건 넷을 **사전(dict)** 으로. `build_preprocessed_dataset(dataset, condition)` 이 그 사전을 본다 |
| 원자 함수 | `features/indicators.py` · `volatility.py` · `volume.py` | 신장환 님 | **손대지 않는다** |
| 라벨·선정 | ADR 0006 · 0007 | 팀 | **그대로** |
| 시험 | `tests/test_preprocessing.py` | 데이터 | B 의 인과성 3건 · C 의 미래참조 0건 · D 의 축 분리 |
| 보고 | `reports/stock_preprocessing_ablation.json` | 오준영 님 스크립트가 쓴다 | 조건 넷이 `conditions` 사전에 같은 모양으로 |

**끼우는 인터페이스** — #210 의 함수 하나만 확장하면 됩니다.

```python
# scripts/run_stock_preprocessing_ablation.py (제안 · 오준영 님 확인 뒤)
CONDITIONS = {
    RAW:                       None,
    WINSOR_ZSCORE:             dict(winsorize="mad", zscore=True),           # #210
    "winsorize_only":          dict(winsorize="mad", zscore=False),          # A
    "ts_zscore_causal":        dict(time_series=dict(window=250, min_periods=60)),   # B
    "cs_zscore_plus_date_level": dict(winsorize="mad", zscore=True, restore_date_level=True),  # C
    "selective_vol_raw":       dict(winsorize="mad", zscore=True, keep_raw=VOL_AXIS),          # D
}
```

`preprocess_cross_section` 에 인자 셋(`time_series` · `restore_date_level` · `keep_raw`)을 더하면
기존 호출은 그대로 돌아갑니다(기본 `None`).

---

## 5. 하지 않는 것 — 그리고 왜 근거를 남기나

| 안 하는 것 | 왜 | 근거는 남긴다 |
|---|---|---|
| 라벨 변경 | [#197](https://github.com/devlee328288/Alpha_Stack/issues/197) ㉮ 결정 | — |
| **변동성 스케일 밴드** (`h_t = c·σ_t`) | 라벨 정의 변경이라 팀 결정. 그리고 §1.2 가 보였듯 **피처 설계가 통째로 뒤집힌다**(ρ +1 → −1) | ✅ §1.2 의 표 — 나중에 논의할 때 다시 재지 않아도 되게 |
| 중립화·순위 (v1.1 ③④) | 상대 목표용. 절대 라벨에서 순위는 수준을 완전히 지운다 | v1.1 §5 실측 (−1.3~2.1%p) |
| 전 표본 표준화 (`StandardScaler`) | 트리에 무의미(v1.1 §5 0.02~0.59%) · 로지스틱은 B 가 더 정직하다 | — |

**변동성 스케일 밴드는 언젠가 다시 나올 질문입니다** — 삼중 배리어가 사실상 표준이고, 우리 2% 가
0.46σ 로 좁습니다. 그때 §1.2 의 표에서 시작하면 됩니다. *"라벨을 바꾸면 변동성 피처의 부호가
뒤집힌다"* 는 것을 알고 시작하는 것과 모르고 시작하는 것은 다릅니다.

---

## 6. 검증 규칙 — v1.1 §6 유지 + 추가

| 규칙 | 무엇 |
|---|---|
| 항등식 금지 (v1.1) | 전처리 결과가 원값과 같은지로 시험하지 않는다 — 다른 값이 나와야 하는 자리다 |
| 🆕 **인과성** | B: 뒤 행을 잘라도 앞 행의 z 가 같다 · 첫 `min_periods` 행은 NaN |
| 🆕 **날짜 수준 보존** | B·C: 날짜별 평균이 0 이 아니다(횡단면 z 의 반대) · 원값의 날짜별 평균과 순위상관 > 0.9 |
| 🆕 **미래참조 0** | C: `cs_mean_*` 은 그날 후보만으로 · `bas_dd` 보다 큰 날짜의 행이 들어가지 않는다 |
| 🆕 **축 분리** | D: `keep_raw` 칸은 입력과 바이트 단위로 같다 |
| 보호 칸 (v1.1) | 라벨·수익률·가격·플래그는 전처리 대상이 아니다 — `ValueError` |

---

## 7. 재현

§1.1 의 표는 아래 조각으로 그대로 재현됩니다. 3차 세션에서 노트북
`02-품질·전처리/07.절대-밴드는-수준을-필요로-한다.ipynb` 로 **그림과 함께** 냅니다 — 십분위 막대와
날짜별 산점도가 있으면 이 설계가 한 장으로 설명됩니다.

```python
import numpy as np, pandas as pd
from scipy import stats
import scripts.run_stock_model_experiment as exp
from features.stock_model_dataset import STOCK_COMBINATION_FEATURES, select_stock_feature_dataset

base = exp._read_cached_panel(exp._panel_cache_signature())
df = select_stock_feature_dataset(base.frame, STOCK_COMBINATION_FEATURES["K"]).frame
df["비중립"] = df["label_numeric"].ne(0).astype(int)
df["십분위"] = pd.qcut(df["hv_20"], 10, labels=False)
t = df.groupby("십분위")["비중립"].mean()
print(stats.spearmanr(t.index, t).statistic)                  # 1.0000

g = df.groupby("bas_dd")["hv_20"]
z = (df["hv_20"] - g.transform("mean")) / g.transform("std")
print(stats.pointbiserialr(df["비중립"], df["hv_20"]).statistic,   # 0.1421
      stats.pointbiserialr(df["비중립"], z).statistic)             # 0.1248
```

## 8. 참고

- López de Prado, M. (2018). *Advances in Financial Machine Learning*, Ch. 3 — 삼중 배리어 · `h_t = c·σ_t`
- Quantdare, "Scaling / normalisation / standardisation: a pervasive question" — 횡단면 vs 시계열 z 의 두 해석과 **수준 정보 손실**
- qlib `CSZScoreNorm`(횡단면) vs `RobustZScoreNorm`(전 구간) — 프레임워크가 둘 다 두는 이유
- Grinold & Kahn, *Active Portfolio Management* — 횡단면 표준화의 전제가 **상대 알파**임
- [모델파트 v1.2 선정축 비교](../../모델파트/version1.2/선정축-비교.md) — 다중검정 보고 방식
- [#197](https://github.com/devlee328288/Alpha_Stack/issues/197) · [PR #210](https://github.com/devlee328288/Alpha_Stack/pull/210) · [#205](https://github.com/devlee328288/Alpha_Stack/issues/205)
